[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
serde_yaml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
mysql = "*"
argon2 = "0.3.2"
rand_core = { version = "0.6", features = ["std"] }
jsonwebtoken = "7.2.0"
